# pycal

./: .gitignore  README.md
.github/workflows/: ci.yml
common/: db.py
event_service/: alembic.ini  docker-compose.yml  pyproject.toml  test.db  test_mysql.py
event_service/alembic/: env.py
event_service/alembic/versions/: 05b646a9ce74_initial_migration.py  84a14fac84a1_initial_migration.py  d12a9c995bef_create_events_table.py
event_service/app/: config.py  crud.py  database.py  logging_config.py  main.py  models.py  schemas.py
event_service/app/crud/: create.py  delete.py  get.py  update.py
event_service/app/exceptions/: handlers.py
event_service/app/middleware/: log_exceptions.py  throttling.py
event_service/app/models/: __init__.py  event.py  json_type.py
event_service/app/routers/: events.py  health_check.py
event_service/app/schemas/: __init__.py  event.py  event_base.py  event_create.py
event_service/initdb/: init.sql
event_service/tests/: conftest.py  test_crud.py  test_events.py  test_health_check.py  test_throttling.py  test_validation.py
