[tool.poetry]
name = "event_service"
version = "0.1.0"
description = "API for managing calendar events"
authors = ["pedrosfaria2 <pedroserrano2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
alembic = "^1.13.2"
httpx = "^0.27.0"
uvicorn = "^0.30.6"
mysqlclient = "^2.2.4"
cryptography = "^43.0.0"
slowapi = "^0.1.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
alembic = "^1.13.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
